# linux-update-py

./: README.md  distro_upgrade  distro_upgrade.py  main.py  pyproject.toml
linux_update/: __init__.py  linux_update.py
src/: distro_upgrade.py
tests/: test_distro_upgrade.py
ubuntu_update/: __init__.py  ubuntu_update.py
