[project]
name = "distro-upgrade"
version = "0.5.0"
description = "Distro Linux SO upgrade support."
authors = [{ name = "Douglas Panhota", email = "douglaspands@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
mypy = "^1.15.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
